# calhacks-xtra

./: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml  sample_video.py
extension/: background.js  content.js  manifest.json  options.html  options.js
extension/icons/: README.md
src/: agent.py  config.py
tests/: test_ingest.py
