[project]
name = "quit-agent"
version = "0.1.0"
description = "Ingestion service and LiveKit agent for Quit Trigger Filter MVP"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.23.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
  "pillow>=10.0.0",
  "livekit-agents[openai]~=1.2",
  "anthropic>=0.71.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.pytest.ini_options]
addopts = "-q"




